--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,20 @@
 {
-  "version": 2,
-  "builds": [
+    "version": 2,
+    "builds": [
       {
-          "src": "./index.js",
-          "use": "@vercel/node"
+        "src": "api/**/*.js",  
+        "use": "@vercel/node"
       }
-  ],
-  "routes": [
+    ],
+    "routes": [
       {
-          "src": "/(.*)",
-          "dest": "/"
+        "src": "/api/(.*)",  
+        "dest": "/api/$1"   
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/index.js"
       }
-  ]
-}
+    ]
+  }
+  
