--- a/adminpanel/package.json
+++ b/adminpanel/package.json
@@ -28,6 +28,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^8.0.5",
     "react-select": "^5.7.3",
     "react-simple-star-rating": "^5.1.7",
