--- a/backend/.env
+++ b/backend/.env
@@ -20,3 +20,7 @@ CLOUDINARY_UPLOAD_PRESET=ml_default
 STRIPE_KEY=your stripe secret api key
 STORE_URL=http://localhost:3000/
 ADMIN_URL=http://localhost:3001/
+
+
+RAZORPAY_KEY_ID=rzp_test_aKg9p1WeVbs39E
+RAZORPAY_KEY_SECRET=sNXftybDQn9CtfzjmsBqSf02
