--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "next": "13.0.4",
+    "razorpay": "^2.9.5",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-copy-to-clipboard": "^5.1.0",
