--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
     "eslint": "8.28.0",
